<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPI Sample</string>

    <color name="black">#666666</color>
    <color name="white">#FFFFFF</color>
    
    <string name="select_interface">Select SPI interface</string>
    <string name="select_interface_title">Select SPI interface</string>
    <string name="select_CPOL">Select clock polarity</string>
    <string name="select_CPHA">Select clock phase</string>
    <string name="CS_HIGH_text">CS HIGH</string>
    <string name="LOOP_text">LOOP</string>
    <string name="LSB_FIRST_text">LSB FIRST</string>
    <string name="NO_CS_text">NO CS</string>
    <string name="THREE_WIRE_text">3-WIRE</string>
    <string name="READY_text">READY</string>
    <string name="select_word_size">Bits per word</string>
    <string name="select_speed">Speed (Hz)</string>
    <string name="select_length">Read length</string>
    <string name="read_button">READ DATA</string>
    <string name="transfer_button">TRANSFER DATA</string>
    <string name="write_button">WRITE DATA</string>
    <string name="send_message">DATA TO SEND</string>    
    <string name="receive_message">RECEIVED DATA</string>
    <string name="warning_message">WARNING: If MOSI and MISO lines are directly bridged to test data transfer, touch screen will stop working!</string>
        
</resources>